--- a/website/src/presentaion-layer/views/login.hbs
+++ b/website/src/presentaion-layer/views/login.hbs
@@ -21,6 +21,7 @@
         <input class="form-input" type="password" name="password" placeholder="Password">
     </div>      
         <button class="btn" type="submit" value="login">Login</button>
+        <a href="/register">Register</a>
     </form>
 </div>
 
