--- a/website/src/presentaion-layer/public/CSS/navbar.css
+++ b/website/src/presentaion-layer/public/CSS/navbar.css
@@ -28,9 +28,8 @@ a{
     grid-template-rows: auto;
     grid-template-columns: auto 1fr;
     background-color: rgb(10, 10, 12);
-    margin-left: -10px;
-    margin-right: -7px;
-    height: 120px;
+    margin-left: 0%;
+    margin-right: 0%;
 }
 
 .mainlogo{
@@ -43,20 +42,21 @@ a{
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
-    margin-top: 25px;
-    padding: 0px;
+    margin-top: 2%;
+    margin-left: 35%;
 }
 #icons li{
     display: inline-block;
     line-height: 30px;
     margin: 20px;
+    
 }
 .loimg{
     display: flex;
     flex-direction: row;
-    width: 90px;
+    width: 100px;
     margin-left: 100%;
-    margin-top: -10%;
+    margin-top: -25%;
 }
 .logout-button{
     margin-top: 5%;
