--- a/website/src/presentaion-layer/views/register.hbs
+++ b/website/src/presentaion-layer/views/register.hbs
@@ -26,7 +26,7 @@
     </div>      
     <div class="form-group">
         <label class="form-label" for="input-example-1">Repeat Password:</label>
-        <input class="form-input" type="password" name="repeat_password" placeholder="Password">
+        <input class="form-input" type="password" name="repeat_password" placeholder="Repeat Password">
     </div> 
         <button class="btn" type="submit" value="register">Register</button>
     </form>
