--- a/website/src/presentaion-layer/views/layouts/main.hbs
+++ b/website/src/presentaion-layer/views/layouts/main.hbs
@@ -24,7 +24,7 @@
 			{{#unless isLoggedIn}}
 				<a href="/login"><img src="/images/profile.png" class="loimg"></a>
 			{{/unless}}
-		
+		</div>
 	</div>
 </div>
 {{{body}}} 
