--- a/website/src/presentaion-layer/public/CSS/login.css
+++ b/website/src/presentaion-layer/public/CSS/login.css
@@ -8,7 +8,6 @@
   width: 30% ;
   height:auto; 
   font-family: 'Electrolize', sans-serif;
-
 }
 .center p{
   margin-top: auto;
@@ -44,4 +43,14 @@
 .form-input{
   width: 100%;
   height: 30px;
+}
+.register{
+  font-family: 'Electrolize', sans-serif;
+  font-size: 120%;
+  border-style: none;
+  font-weight: 300;
+}
+.register:hover{
+  background-color: rgb(216, 13, 13);
+  font-family: 'Electrolize', sans-serif;
 }
