a little changes for tomorrow

--- a/website/src/presentaion-layer/layouts/main.hbs
+++ b/website/src/presentaion-layer/layouts/main.hbs
@@ -22,7 +22,7 @@
 			</form>
 		{{/if}}	
 			{{#unless isLoggedIn}}
-				<a href="/login"><img src="/images/profile.png" class="loimg"></a>
+				<a href="/account/login"><img src="/images/profile.png" class="loimg"></a>
 			{{/unless}}
 		</div>
 	</div>
