--- a/website/src/presentaion-layer/views/login.hbs
+++ b/website/src/presentaion-layer/views/login.hbs
@@ -14,14 +14,14 @@
     <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <div class="form-group has-success">
         <label class="form-label" for="input-example-1">Username:</label>
-        <input class="form-input" type="text" name="username" placeholder="Username">
+        <input class="form-input" type="text" name="username" placeholder="Username" required>
     </div>
     <div class="form-group">
         <label class="form-label" for="input-example-1">Password:</label>
-        <input class="form-input" type="password" name="password" placeholder="Password">
+        <input class="form-input" type="password" name="password" placeholder="Password" required>
     </div>      
         <button class="btn" type="submit" value="login">Login</button>
-        <a href="/register" class="register">Register</a>
+        <a href="/account/sign-up" class="register">Register</a>
     </form>
 </div>
 
