--- a/website/src/presentaion-layer/views/register.hbs
+++ b/website/src/presentaion-layer/views/register.hbs
@@ -3,10 +3,10 @@
 <title>REGISTER</title>
 
 <div class="center">
-    <div class="login_logo">
+    <div class="register_logo">
         <span style="color:#FFF">REGISTER</span>
     </div>
-    <div class="center" >
+    <div class="register_center" >
         <form action="" method="POST" name="register">
             {{#if registerError}}
                 <p class="login_error_msg">Cannot register, Try Again</p>
@@ -14,19 +14,19 @@
             <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <div class="form-group has-success">
                 <label class="form-label" for="input-example-1">Name:</label>
-                <input class="form-input" type="text" name="name" placeholder="Name">
+                <input class="form-input" type="text" name="name" placeholder="Name" required>
             </div>
             <div class="form-group has-success">
                 <label class="form-label" for="input-example-1">Username:</label>
-                <input class="form-input" type="text" name="username" placeholder="Username">
+                <input class="form-input" type="text" name="username" placeholder="Username" required>
             </div>
             <div class="form-group">
                 <label class="form-label" for="input-example-1">Password:</label>
-                <input class="form-input" type="password" name="password" placeholder="Password">
+                <input class="form-input" type="password" name="password" placeholder="Password" required>
             </div>      
             <div class="form-group">
                 <label class="form-label" for="input-example-1">Repeat Password:</label>
-                <input class="form-input" type="password" name="repeat_password" placeholder="Repeat Password">
+                <input class="form-input" type="password" name="repeat_password" placeholder="Repeat Password" required>
             </div> 
                 <button class="btn" type="submit" value="register">Register</button>
         </form>
