--- a/website/src/presentaion-layer/views/register.hbs
+++ b/website/src/presentaion-layer/views/register.hbs
@@ -7,7 +7,7 @@
         <span style="color:#FFF">REGISTER</span>
     </div>
     <div class="register_center" >
-        <form action="" method="POST" name="register">
+        <form action="/account/sign-up" method="POST" name="register">
             {{#if errors.length}}
                 {{#each errors}}
                     <p class="login_error_msg">{{this}}</p>
