--- a/website/src/presentaion-layer/public/CSS/navbar.css
+++ b/website/src/presentaion-layer/public/CSS/navbar.css
@@ -82,7 +82,7 @@ a{
 .staff_header{
     color: red;
 }
-.staff_top{
+.feedbacks_top{
     margin-left: 2%;
     font-family: 'Electrolize', sans-serif;
     font-size: xx-large;
@@ -121,6 +121,8 @@ a{
     text-decoration: none;
     list-style: none;
 }
+
+
 .comment_header{
     color: red;
 }
