--- a/website/src/presentaion-layer/views/login.hbs
+++ b/website/src/presentaion-layer/views/login.hbs
@@ -15,11 +15,11 @@
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <div class="form-group has-success">
             <label class="form-label" for="input-example-1">Username:</label>
-            <input class="form-input" type="text" name="username" placeholder="Username" required>
+            <input class="form-input" type="text" name="username" value="{{username}}" placeholder="Username" required>
         </div>
         <div class="form-group">
             <label class="form-label" for="input-example-1">Password:</label>
-            <input class="form-input" type="password" name="password" placeholder="Password" required>
+            <input class="form-input" type="password" name="password" value= "{{password}}" placeholder="Password" required>
         </div>      
         <button class="btn" type="submit" value="login">Login</button>
         <a href="/account/sign-up" class="register">Register</a>
