jag har fixat att man skapar feedback men det saknar att man ska h'mta dem fr[n database s[ jag vet inte vart felet är

--- a/website/src/presentaion-layer/views/feedbacks.hbs
+++ b/website/src/presentaion-layer/views/feedbacks.hbs
@@ -10,7 +10,7 @@
     {{#if feedbacks.length}}
         <div class="displayed_list">
             {{#each feedbacks}}
-                <p><a href="/feedback/{{feedbacks.id}}" class="id_name">{{feedbacks.title}}</a></p>
+                <p><a href="/feedback/{{id}}" class="id_name">{{title}}</a></p>
             {{/each}}
         </div>
     {{else}}
