--- a/website/src/presentaion-layer/views/create-feedback.hbs
+++ b/website/src/presentaion-layer/views/create-feedback.hbs
@@ -7,19 +7,22 @@
 
 <div id="user_section">
 	<h1>CREATE A COMMENT</h1>
-	{{> errors errors}}
-		{{#if dbErrorOccurred}}
-		<p class="admin_top">Can't display the page now, try again later.</p>
+		{{#if errors.length}}
+			{{#each errors}}
+				<p class="login_error_msg">{{this}}</p>
+			{{/each}}
 		{{/if}}
 		<form action="" method="POST">
 			<input type="hidden" name="_csrf" value="{{csrfToken}}">
 			<div>
 				Title: <input type="name" name="title" value="{{feedback.title}}">
 			</div>
-			<div id="update_textarea">
-				content: 
+			<div>
+				Game: <input type="name" name="game" value="{{feedback.game}}">
 			</div>
-				<textarea class="update_textarea" type="text" name="content" rows="4" cols="60" >{{feedback.content}} </textarea>
+			<div id="update_textarea">
+				content: <textarea class="update_textarea" type="text" name="content" rows="4" cols="60" >{{feedback.content}} </textarea>
+			</div>
 			<div id="submit_update">
 				<input class="submit_update_btn" type="submit" name="create-btn" value="CREATE">
 			</div>
