fixed routers touting

--- a/website/src/presentaion-layer/views/comments.hbs
+++ b/website/src/presentaion-layer/views/comments.hbs
@@ -3,7 +3,7 @@
 	{{#if dbErrorOccurred}}
 		<p class="admin_top">Can't display the page now, try again later.</p>
 	{{else}}
-		<p class="creat"><a href="/comments/create">POST A COMMENT</a></p>
+		<p class="creat"><a href="/createComment">POST A COMMENT</a></p>
 		<p class="staff_top">COMMENTS:</p>
 		{{#if comments.length}}
 			<div class="displayed_list">
