--- a/website/src/presentaion-layer/public/CSS/about.css
+++ b/website/src/presentaion-layer/public/CSS/about.css
@@ -15,7 +15,7 @@
     max-width: 75%;
 }
 #about span{
-    color: red;
+    color: rgb(210, 140, 1);
     font-family: 'Electrolize', sans-serif;
     font-weight: 900;
     font-size: 35px;
