--- a/website/src/presentaion-layer/views/feedbacks.hbs
+++ b/website/src/presentaion-layer/views/feedbacks.hbs
@@ -4,13 +4,13 @@
     <p class="admin_top">Can't display the page now, try again later.</p>
 {{else}}
     {{#if isLoggedIn}}
-        <p class="creat"><a href="/feedbacks/create/{{user.id}}">Post A Feedback</a></p>
+        <p class="creat"><a href="/feedbacks/create/{{user.id}}">✎Post A Feedback</a></p>
     {{/if}}
     <p class="feedbacks_top">FEEDBACKS:</p>
     {{#if feedbacks.length}}
         <div class="displayed_list">
             {{#each feedbacks}}
-                <p><a href="/feedback/{{id}}" class="id_name">{{title}}</a></p>
+                <p><a href="/feedbacks/{{id}}" class="id_name">{{title}} || {{game}}</a></p>
             {{/each}}
         </div>
     {{else}}
