added rest api with its crud functions

--- a/website/src/presentaion-layer/layouts/main.hbs
+++ b/website/src/presentaion-layer/layouts/main.hbs
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
-        <link href = "/CSS/navbar.css" rel= "stylesheet" type = "text/css" >
-		<link href = "/CSS/login.css" rel= "stylesheet" type = "text/css" >
+        <link href="/CSS/navbar.css" rel="stylesheet" type="text/css" >
+		<link href="/CSS/login.css" re="stylesheet" type="text/css" >
      
 </head>
 <body>
