--- a/website/src/presentaion-layer/views/feedback.hbs
+++ b/website/src/presentaion-layer/views/feedback.hbs
@@ -12,7 +12,7 @@
 			<div class="feedback">					
 				<p class="title">TITLE: {{feedback.title}}</p>
 				<p class="title">GAME: {{feedback.game}}</p>
-				<p class="title">COMMENT: {{feedback.content}}</p>
+				<p class="title">CONTENT: {{feedback.content}}</p>
 			</div>
 
 		</div>
