--- a/website/src/presentaion-layer/views/create-comment.hbs
+++ b/website/src/presentaion-layer/views/create-comment.hbs
@@ -25,5 +25,5 @@
 		</form>
 	</div>
 {{else}}
-	<p class="login_error_msg">You need to be logged in to post a comment.</p>
+	<p class="notLoggedIn">You Need To Be Logged In To Post A Comment.</p>
 {{/if}}
