--- a/website/src/presentaion-layer/views/create-feedback.hbs
+++ b/website/src/presentaion-layer/views/create-feedback.hbs
@@ -27,5 +27,8 @@
 					<input class="submit_update_btn" type="submit" name="create-btn" value="CREATE">
 				</div>	
 			</form>
+			{{else}}
+				<p class="notLoggedIn">You Need To Be Logged In To Post A Feedback.</p>
 		{{/if}}
+
 </div>
