--- a/website/src/presentaion-layer/views/feedbacks.hbs
+++ b/website/src/presentaion-layer/views/feedbacks.hbs
@@ -14,6 +14,6 @@
             {{/each}}
         </div>
     {{else}}
-        <p class="no-content">Theres no Comments</p>
+        <p class="no-content">Theres no Feedbacks</p>
     {{/if}}
 {{/if}}
